@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Mines
 _Comment=Clear mines from a minefield
 Exec=gnomine
-Icon=gnome-gnomine.png
+Icon=gnome-gnomine
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;LogicGame;
